# NiPlot

./: LICENSE  README.md  pyproject.toml
NiPlot/: NiPlotCmdApp.py  __init__.py  __main__.py  aboutdialog.py  mainwindow.py
NiPlot/core/: baseplugin.py  dataio.py  iStagingLogger.py  plotcanvas.py
NiPlot/core/gui/: CheckableQComboBox.py  NestedCheckableQComboBox.py  NestedQMenu.py  QColorTable.py  SearchableQComboBox.py
NiPlot/core/model/: cmdmodel.py  datamodel.py
NiPlot/plugins/adjcovview/: adjcovview.py
NiPlot/plugins/distview/: distview.py
NiPlot/plugins/dsetview/: dsetview.py
NiPlot/plugins/filterview/: filterview.py
NiPlot/plugins/mergeview/: mergeview.py
NiPlot/plugins/normalizeview/: normalizeview.py
NiPlot/plugins/plotview/: plotview.py
