[build-system]
requires = ["setuptools", "wheel", "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
#build-backend = "setuptools.build_meta"
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NiPlot"
version = "0.1"
description = "NeuroImaging Data Plotting Tool"
authors = [
    "Guray Erus <guray.erus@pennmedicine.upenn.edu>",
]
keywords = ["neuro-imaging", "MRI", "plotting"]

readme = "README.md"

include = ["NiPlot/**/*.ui",
           "NiPlot/**/*.yapsy-plugin",
           "*.png"]
packages = [
    {include = "NiPlot"}
]


[tool.briefcase]
project_name = "NiPlot"
name = "[NiPlot]"
bundle = "com.example"
version = "0.1"
description = "NeuroImaging Data Plotting Tool"
authors = [
    "Guray Erus <guray.erus@pennmedicine.upenn.edu>",
]
keywords = ["neuro-imaging", "MRI", "plotting"]
readme = "README.md"
icon = "NiPlot/resources/icon"
installer_icon = "NiPlot/resources/icon"
include = ["NiPlot/**/*.ui",
           "NiPlot/**/*.yapsy-plugin",
           "*.png"]
packages = [
    {include = "NiPlot"}
]

[tool.briefcase.app.NiPlot.macOS]
requires = []

[tool.briefcase.app.NiPlot.linux]
requires = []
system_requires = []

[tool.briefcase.app.NiPlot.windows]
requires = []

[tool.briefcase.app.NiPlot]
formal_name = "NiPlot"
description = "NeuroImaging Data Plotting Tool"
icon = "NiPlot/resources/icon" # Briecase will choose the right extension depending the os (png,ico,...)
sources = ['NiPlot']
requires = ['cycler==0.10.0',
'joblib==1.0.1',
'MarkupSafe==2.0.1',
'matplotlib>=3.4.2',
'nibabel==3.2.1',
'numpy>=1.21',
'pandas==1.3.4',
'Pillow>=9.0.0',
'pyparsing==2.4.7',
'PyQt5>=5.15.4',
'PyQt5_Qt5==5.15.2',
'PyQt5_sip==12.9.0',
'dill==0.3.4',
'future==0.18.2',
'python_dateutil==2.8.1',
'pytz==2021.1',
'scikit_learn>=1.0.2',
'scipy>=1.6.3',
'seaborn==0.11.1',
'six==1.16.0',
'statsmodels==0.13.0',
'wheel>=0.37.1',
'Yapsy==1.12.2',
'pytest==7.0.1',
'pytest-qt==4.0.2']


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
briefcase = "^0.3.5"
cycler = "^0.10.0"
joblib = "^1.0.1"
MarkupSafe = "2.0.1"
matplotlib = "^3.4.2"
nibabel = "^3.2.1"
numpy = "^1.21"
pandas = "1.3.4"
Pillow = "^9.0.0"
pyparsing = "^2.4.7"
PyQt5 = "^5.15.4"
PyQt5_Qt5 = "^5.15.2"
PyQt5_sip = "^12.9.0"
dill = "^0.3.4"
future = "^0.18.2"
python_dateutil = "^2.8.1"
pytz = "^2021.1"
scikit_learn = "^1.0.2"
scipy = "^1.6.3"
seaborn = "^0.11.1"
six = "^1.16.0"
statsmodels = "^0.13.0"
Yapsy = "^1.12.2"
Jinja2 = "^2.11.3"
pytest = "7.0.1"
pytest-qt = "4.0.2"

[tool.poetry.urls]
homepage = "https://github.com/gurayerus/NiPlot"
repository = "https://github.com/gurayerus/NiPlot"
documentation = "https://cbica.github.io/NiPlot"

[tool.poetry.scripts]
NiPlot = "NiPlot:main"
